--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       $(document).ready(function() {
 
         function wordCount(fragment) {
+					if(!fragment || (fragment.length === 0) ) return 0;
           return fragment.trim().split(/\s+/).length;
         }
         createExample('Word Count', {
@@ -28,7 +29,15 @@
             {
               input: '  ignore  spaces  ',
               output: 2
-            }
+            },
+						{
+							input: null,
+							output: 0
+						},
+						{
+							input: '',
+							output: 0
+						}
           ]
         });
 
