--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                           tens: 1000,
                           fives: 500,
                           ones: 100,
+                          halves: 50,
                           quarters: 25,
                           dimes: 10,
                           nickels: 5,
@@ -157,30 +158,33 @@
         ];
 
         function movieParse(movies) {
-          
-          var movieData = [];
-          var dataIdx = 0;
+          var MovieObj = { movie: "",
+                           year: 0,
+                           votes: 0
+                         };
+          var movieData = [MovieObj,MovieObj,MovieObj,MovieObj,MovieObj,
+                           MovieObj,MovieObj,MovieObj,MovieObj,MovieObj];
+  
           for ( var idx=0; idx < movieList.length; idx++ ) {
+            var mObj = { movie: "",
+                         year: 0,
+                         votes: 0
+                       };
             var movie = movieList[idx].split(",");
-            var MovieObj = { movie: movie[0],
-                                    year: movie[1],
-                                    votes: movie[2]
-                                  };
-            console.log(MovieObj.movie +"--"+MovieObj.year+"--"+MovieObj.votes);
-            movieData.push( MovieObj );
+            mObj.movie = movie[0];
+            mObj.year = movie[1];
+            mObj.votes = movie[2];
+          //  console.log(mObj.movie +"--"+mObj.year+"--"+mObj.votes);
+            movieData[idx] = mObj;
           };
-          console.log("movies: "+movieData.length);
-          function compareYears(movieA,movieB) {
-              console.log("compare "+movieA.movie+" WITH "+movieB.movie);
-            // if ( movieA.year < movieB.year ) return -1;
-           //  if ( movieA.year === movieB.year ) return 0;
-           //  if ( movieA.year > movieB.year ) return 1;
-            return 0;
-          };
-          movieData.sort(compareYears(MovieObj,MovieObj))
+          //console.log("movie count: "+movieData.length);
+          
+          movieData.sort(function(a,b) {return a.year-b.year;} );
           for ( var idx=0; idx < movieData.length; idx++ ) {
-              console.log("movieData["+idx+"] "+movieData[idx].movie +"*"+movieData[idx].year+"*"+movieData[idx].votes);
-          }
+              console.log("movieData["+idx+"] "+movieData[idx].movie +" ** "+movieData[idx].year+" ** "+movieData[idx].votes);
+          };
+          //console.log("After sort movie count: "+movieData.length);
+
           return movieData;
         }
         createExample('Movie Parsing', {
